[package]
name = "timetracker"
version = "0.1.0"
authors = ["Exr0n <spotyie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
nanoid = "0.3.0"
time = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
